[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/scenes/Robot.gd" type="Script" id=1]
[ext_resource path="res://assets/robot_n.png" type="Texture" id=2]
[ext_resource path="res://assets/robot_se.png" type="Texture" id=3]
[ext_resource path="res://assets/robot_s.png" type="Texture" id=4]
[ext_resource path="res://assets/robot_e.png" type="Texture" id=5]
[ext_resource path="res://assets/robot_ne.png" type="Texture" id=6]
[ext_resource path="res://assets/Sound/Asas4.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/Sound/Asas2.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/Sound/Asas3.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 21 )

[node name="Robot" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Robot_N" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, -4 )
scale = Vector2( 0.0926966, 0.105429 )
texture = ExtResource( 2 )

[node name="Robot_E" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, -4 )
scale = Vector2( 0.0926966, 0.105429 )
texture = ExtResource( 5 )

[node name="Robot_S" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, -4 )
scale = Vector2( 0.0926966, 0.105429 )
texture = ExtResource( 4 )

[node name="Robot_SE" type="Sprite" parent="."]
position = Vector2( 1.13687e-13, -4 )
scale = Vector2( 0.0926966, 0.105429 )
texture = ExtResource( 3 )

[node name="Robot_NE" type="Sprite" parent="."]
position = Vector2( 1.13687e-13, -4 )
scale = Vector2( 0.0926966, 0.105429 )
texture = ExtResource( 6 )

[node name="Confusion" type="Label" parent="."]
margin_left = -6.0
margin_top = -56.0
margin_right = 25.0
margin_bottom = -42.0
rect_scale = Vector2( 1.56522, 1.54531 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioÁsás1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioÁsás2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="AudioÁsás3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
